[gd_scene load_steps=13 format=2]

[ext_resource path="res://effects/Starfield.gd" type="Script" id=1]
[ext_resource path="res://effects/StarTypeA.tres" type="Material" id=2]
[ext_resource path="res://effects/StarTypeB.tres" type="Material" id=3]
[ext_resource path="res://effects/StarTypeC.tres" type="Material" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 45, 15, 2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="QuadMesh" id=6]
material = ExtResource( 2 )
size = Vector2( 0.125, 0.125 )

[sub_resource type="MultiMesh" id=9]
transform_format = 1
instance_count = 20
mesh = SubResource( 6 )
transform_array = PoolVector3Array( 0.770582, 0, 0, 0, 0.770582, 0, 0, 0, 0.770582, -21.9191, -1.80662, 0, 1.1599, 0, 0, 0, 1.1599, 0, 0, 0, 1.1599, 3.61364, -6.51119, 0, 0.655689, 0, 0, 0, 0.655689, 0, 0, 0, 0.655689, -21.6123, -12.9316, 0, 0.597319, 0, 0, 0, 0.597319, 0, 0, 0, 0.597319, -11.975, -13.5516, 0, 0.848771, 0, 0, 0, 0.848771, 0, 0, 0, 0.848771, -20.8476, -0.757553, 0, 0.95768, 0, 0, 0, 0.95768, 0, 0, 0, 0.95768, -3.59111, -13.0322, 0, 0.796131, 0, 0, 0, 0.796131, 0, 0, 0, 0.796131, -19.7406, -12.0488, 0, 0.544879, 0, 0, 0, 0.544879, 0, 0, 0, 0.544879, 3.19048, -14.8836, 0, 0.878842, 0, 0, 0, 0.878842, 0, 0, 0, 0.878842, -18.7548, -12.6265, 0, 0.65901, 0, 0, 0, 0.65901, 0, 0, 0, 0.65901, 8.09912, -12.338, 0, 0.833593, 0, 0, 0, 0.833593, 0, 0, 0, 0.833593, 10.0108, -11.8859, 0, 0.813436, 0, 0, 0, 0.813436, 0, 0, 0, 0.813436, -16.863, -6.34237, 0, 0.938097, 0, 0, 0, 0.938097, 0, 0, 0, 0.938097, -16.0716, -11.3673, 0, 0.939973, 0, 0, 0, 0.939973, 0, 0, 0, 0.939973, 3.828, -5.61207, 0, 1.05365, 0, 0, 0, 1.05365, 0, 0, 0, 1.05365, -4.85772, -2.95469, 0, 1.0728, 0, 0, 0, 1.0728, 0, 0, 0, 1.0728, -10.7582, -0.756994, 0, 0.637609, 0, 0, 0, 0.637609, 0, 0, 0, 0.637609, 18.5936, -3.78513, 0, 0.964895, 0, 0, 0, 0.964895, 0, 0, 0, 0.964895, -17.0868, -10.3524, 0, 1.12939, 0, 0, 0, 1.12939, 0, 0, 0, 1.12939, -9.82146, -3.16339, 0, 0.642845, 0, 0, 0, 0.642845, 0, 0, 0, 0.642845, 7.42308, -3.45609, 0 )

[sub_resource type="QuadMesh" id=7]
material = ExtResource( 3 )
size = Vector2( 0.125, 0.125 )

[sub_resource type="MultiMesh" id=10]
transform_format = 1
instance_count = 20
mesh = SubResource( 7 )
transform_array = PoolVector3Array( 0.770582, 0, 0, 0, 0.770582, 0, 0, 0, 0.770582, -21.9191, -1.80662, 0, 1.1599, 0, 0, 0, 1.1599, 0, 0, 0, 1.1599, 3.61364, -6.51119, 0, 0.655689, 0, 0, 0, 0.655689, 0, 0, 0, 0.655689, -21.6123, -12.9316, 0, 0.597319, 0, 0, 0, 0.597319, 0, 0, 0, 0.597319, -11.975, -13.5516, 0, 0.848771, 0, 0, 0, 0.848771, 0, 0, 0, 0.848771, -20.8476, -0.757553, 0, 0.95768, 0, 0, 0, 0.95768, 0, 0, 0, 0.95768, -3.59111, -13.0322, 0, 0.796131, 0, 0, 0, 0.796131, 0, 0, 0, 0.796131, -19.7406, -12.0488, 0, 0.544879, 0, 0, 0, 0.544879, 0, 0, 0, 0.544879, 3.19048, -14.8836, 0, 0.878842, 0, 0, 0, 0.878842, 0, 0, 0, 0.878842, -18.7548, -12.6265, 0, 0.65901, 0, 0, 0, 0.65901, 0, 0, 0, 0.65901, 8.09912, -12.338, 0, 0.833593, 0, 0, 0, 0.833593, 0, 0, 0, 0.833593, 10.0108, -11.8859, 0, 0.813436, 0, 0, 0, 0.813436, 0, 0, 0, 0.813436, -16.863, -6.34237, 0, 0.938097, 0, 0, 0, 0.938097, 0, 0, 0, 0.938097, -16.0716, -11.3673, 0, 0.939973, 0, 0, 0, 0.939973, 0, 0, 0, 0.939973, 3.828, -5.61207, 0, 1.05365, 0, 0, 0, 1.05365, 0, 0, 0, 1.05365, -4.85772, -2.95469, 0, 1.0728, 0, 0, 0, 1.0728, 0, 0, 0, 1.0728, -10.7582, -0.756994, 0, 0.637609, 0, 0, 0, 0.637609, 0, 0, 0, 0.637609, 18.5936, -3.78513, 0, 0.964895, 0, 0, 0, 0.964895, 0, 0, 0, 0.964895, -17.0868, -10.3524, 0, 1.12939, 0, 0, 0, 1.12939, 0, 0, 0, 1.12939, -9.82146, -3.16339, 0, 0.642845, 0, 0, 0, 0.642845, 0, 0, 0, 0.642845, 7.42308, -3.45609, 0 )

[sub_resource type="QuadMesh" id=8]
material = ExtResource( 4 )
size = Vector2( 0.125, 0.125 )

[sub_resource type="MultiMesh" id=11]
transform_format = 1
instance_count = 20
mesh = SubResource( 8 )
transform_array = PoolVector3Array( 0.770582, 0, 0, 0, 0.770582, 0, 0, 0, 0.770582, -21.9191, -1.80662, 0, 1.1599, 0, 0, 0, 1.1599, 0, 0, 0, 1.1599, 3.61364, -6.51119, 0, 0.655689, 0, 0, 0, 0.655689, 0, 0, 0, 0.655689, -21.6123, -12.9316, 0, 0.597319, 0, 0, 0, 0.597319, 0, 0, 0, 0.597319, -11.975, -13.5516, 0, 0.848771, 0, 0, 0, 0.848771, 0, 0, 0, 0.848771, -20.8476, -0.757553, 0, 0.95768, 0, 0, 0, 0.95768, 0, 0, 0, 0.95768, -3.59111, -13.0322, 0, 0.796131, 0, 0, 0, 0.796131, 0, 0, 0, 0.796131, -19.7406, -12.0488, 0, 0.544879, 0, 0, 0, 0.544879, 0, 0, 0, 0.544879, 3.19048, -14.8836, 0, 0.878842, 0, 0, 0, 0.878842, 0, 0, 0, 0.878842, -18.7548, -12.6265, 0, 0.65901, 0, 0, 0, 0.65901, 0, 0, 0, 0.65901, 8.09912, -12.338, 0, 0.833593, 0, 0, 0, 0.833593, 0, 0, 0, 0.833593, 10.0108, -11.8859, 0, 0.813436, 0, 0, 0, 0.813436, 0, 0, 0, 0.813436, -16.863, -6.34237, 0, 0.938097, 0, 0, 0, 0.938097, 0, 0, 0, 0.938097, -16.0716, -11.3673, 0, 0.939973, 0, 0, 0, 0.939973, 0, 0, 0, 0.939973, 3.828, -5.61207, 0, 1.05365, 0, 0, 0, 1.05365, 0, 0, 0, 1.05365, -4.85772, -2.95469, 0, 1.0728, 0, 0, 0, 1.0728, 0, 0, 0, 1.0728, -10.7582, -0.756994, 0, 0.637609, 0, 0, 0, 0.637609, 0, 0, 0, 0.637609, 18.5936, -3.78513, 0, 0.964895, 0, 0, 0, 0.964895, 0, 0, 0, 0.964895, -17.0868, -10.3524, 0, 1.12939, 0, 0, 0, 1.12939, 0, 0, 0, 1.12939, -9.82146, -3.16339, 0, 0.642845, 0, 0, 0, 0.642845, 0, 0, 0, 0.642845, 7.42308, -3.45609, 0 )

[node name="Starfield" type="Spatial"]
script = ExtResource( 1 )

[node name="FieldMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="FieldA" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 9 )

[node name="FieldB" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 10 )

[node name="FieldC" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 11 )
